--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1> razones por que la quiero</h1>
-    <p>no se, hacer esto me da diabetes, pero la amo mucho</p>
+    <p>no se, pero la amo mucho</p>
   </body>
 </html>
