--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,11 @@
     <link rel="stylesheet" href="\Users\David\Desktop\PLATZI\git y github\proyecto_1\css\estilos.css">
   </head>
   <body>
-    <h1> razones por que la quiero</h1>
-    <p>no se, pero la amo mucho</p>
+    <div id= "container">
+      <div id="post">
+        <h1> venta de bolis y hielo</h1>
+        <p>el boli es a 300 y el hilo a 400 pesos, paga o vete de aqui</p>
+      </div>
+    </div>
   </body>
 </html>
