--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     <div id= "container">
+      <div id="cabecera">
+        cabecera
+      </div>
       <div id="post">
         <h1> venta de bolis y hielo</h1>
         <p>el boli es a 300 y el hilo a 400 pesos, paga o vete de aqui</p>
