--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
       <div id="post">
         <h1> venta de bolis y hielo</h1>
         <p>el boli es a 300 y el hilo a 400 pesos, paga o vete de aqui</p>
+        <p>me quiero morir, compren algo hpts</p>
       </div>
     </div>
   </body>
