--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
   <body>
     <div id= "container">
       <div id="cabecera">
-        hiperblog <span id= "tangible" >tu blog de confianza</ span>
+        hiperblog <span id= "tangible" >tu blog de cabecera</ span>
       </div>
       <div id="post">
         <h1> venta de bolis y hielo</h1>
