modificacion de la cabecera, el color de texto y agregue un parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
   <body>
     <div id= "container">
       <div id="cabecera">
-        hiperblog <span id= "tangible" >tu blog de confianza</ span>
+        hiperblog <span id= "tangible" >tu blog maestro</ span>
       </div>
       <div id="post">
         <h1> venta de bolis y hielo</h1>
         <p>el boli es a 300 y el hilo a 400 pesos, paga o vete de aqui</p>
         <p>me quiero morir, compren algo hpts</p>
+        <p>sin ideas</p>
       </div>
     </div>
   </body>
