--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>por que quiero a mi morshis</title>
+    <title>venta de bolis y hielo</title>
     <link rel="stylesheet" href="\Users\David\Desktop\PLATZI\git y github\proyecto_1\css\estilos.css">
   </head>
   <body>
@@ -12,7 +12,7 @@
       <div id="post">
         <h1> venta de bolis y hielo</h1>
         <p>el boli es a 300 y el hilo a 400 pesos, paga o vete de aqui</p>
-        <p>me quiero morir, compren algo hpts</p>
+        <p>compren algo hpts</p>
         <p>sin ideas</p>
       </div>
     </div>
