una version del hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>venta de bolis y hielo</title>
+    <title>venta de bolis y hielo ;)</title>
     <link rel="stylesheet" href="\Users\David\Desktop\PLATZI\git y github\proyecto_1\css\estilos.css">
   </head>
   <body>
